# tad-conversion-tool-rust

./: .pre-commit-config.yaml  Cargo.toml
input/: Algoritmebeschrijvingen.csv  anonimisation_software.csv  buyback_protection_act.csv
src/: algoritmeregister.rs  lib.rs  main.rs  system_card.rs
